# esp_rust

./: Cargo.toml  build_and_flash.sh  sdkconfig.defaults
examples/: adc.rs  ble_advertiser.rs  ble_client.rs  ble_scan.rs  ble_secure_client.rs  ble_secure_server.rs  ble_server_v1.rs  ble_server_v2.rs  freertos_tasknotiffy.rs  i2c_example.rs  i2c_master.rs  i2c_slave.rs  matrix3x4.rs  matrix3x4_interrupt.rs  oled.rs  scrap.rs  scrap2.rs  scrap3.rs  scrap4.rs  scrap5_client.rs  spi.rs  uart.rs
examples/mod_lib/: image_ret.rs  matrix4x4.rs
simulator/: Buffer.rs  E32_Module.rs  bit_opperation.rs  main.rs
src/: main.rs
src/main1/: main.rs
src/main2/: main.rs
src/main3/: main.rs
src/mod_lib/: matrix4x4.rs
